Accelerated animations on ::backdrop shouldn't affect <dialog> (backdrop-animate-002.html fails) https://bugs.webkit.org/show_bug.cgi?id=230008 <rdar://problem/82975766>

Reviewed by Simon Fraser and Tim Nguyen.

Source/WebCore:

We did not know how to access the ::backdrop renderer when running accelerated animations. To do so we now
implement full support to access the renderer for known pseudo-elements on Styleable with a new renderer()
method, including ::backdrop. We also make Styleable::fromRenderer() aware of ::backdrop such that the various
call sites for this function that deal with accelerated transform animations access the right element.

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::renderer const):
* style/Styleable.cpp:
(WebCore::Styleable::fromRenderer):
(WebCore::Styleable::renderer const):
* style/Styleable.h:
(WebCore::Styleable::fromRenderer): Deleted.

LayoutTests:

* TestExpectations: Mark the previously failing test as passing.

Canonical link: https://commits.webkit.org/243109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284313 268f45cc-cd09-0410-ab3c-d52691b4dbfc